duniverse/menhirLib.20200211/test/static/bad/sloc-with-param.mly
%token A B
%start<unit> main
%%
main: a = A b = B { $sloc(b) }
