duniverse/menhirLib.20200211/test/static/bad/sloc-with-param.exp
File "sloc-with-param.mly", line 4, characters 20-28:
Error: $sloc does not take a parameter.
